tests/baselines/reference/switchCaseWithIntersectionTypes01.errors.txt
tests/cases/conformance/types/typeRelationships/comparable/switchCaseWithIntersectionTypes01.ts(19,10): error TS2323: Type 'number & boolean' is not comparable to type 'string & number'.
  Type 'number & boolean' is not comparable to type 'string'.
    Type 'boolean' is not comparable to type 'string'.
tests/cases/conformance/types/typeRelationships/comparable/switchCaseWithIntersectionTypes01.ts(23,10): error TS2323: Type 'boolean' is not comparable to type 'string & number'.
  Type 'boolean' is not comparable to type 'string'.


==== tests/cases/conformance/types/typeRelationships/comparable/switchCaseWithIntersectionTypes01.ts (2 errors) ====
    
    var strAndNum: string & number;
    var numAndBool: number & boolean;
    var str: string;
    var num: number;
    var bool: boolean;
    
    switch (strAndNum) {
        // Identical
        case strAndNum:
            break;
    
        // Constituents
        case str:
        case num:
            break;
    
        // Overlap in constituents
        case numAndBool:
             ~~~~~~~~~~
!!! error TS2323: Type 'number & boolean' is not comparable to type 'string & number'.
!!! error TS2323:   Type 'number & boolean' is not comparable to type 'string'.
!!! error TS2323:     Type 'boolean' is not comparable to type 'string'.
            break;
    
        // No relation
        case bool:
             ~~~~
!!! error TS2323: Type 'boolean' is not comparable to type 'string & number'.
!!! error TS2323:   Type 'boolean' is not comparable to type 'string'.
            break;
    }